--- a/index.html
+++ b/index.html
@@ -281,33 +281,22 @@
         { name: "Sanse Modelo 5", img: "https://i.postimg.cc/Y0zcw2kX/d498c445-09de-4bce-9780-dabbcbab3737.jpg" },
         { name: "Sanse Modelo 6", img: "https://i.postimg.cc/kg1m45Sz/f2466599-79e4-42e2-bac1-f92ecbd510ce.jpg" },
       ],
+      "TISOT": [
+        { name: "Tisot Modelo 1", img: "https://i.postimg.cc/XvPC6Fgv/3d292dba-742f-4784-a32d-414e60258238.jpg" },
+        { name: "Tisot Modelo 2", img: "https://i.postimg.cc/wBMmrFLP/799a8ba8-0332-4370-b967-87e692986807.jpg" },
+        { name: "Tisot Modelo 3", img: "https://i.postimg.cc/dVqd2J1J/9ff77647-ba8a-4792-9147-eb7c43a664f6.jpg" },
+        { name: "Tisot Modelo 4", img: "https://i.postimg.cc/rwQ4g70x/ab802fff-936a-414f-ae12-8f3860459022.jpg" },
+        { name: "Tisot Modelo 5", img: "https://i.postimg.cc/TwWWdwkJ/be95ad66-1d06-47c9-8eba-de307630570b.jpg" },
+        { name: "Tisot Modelo 6", img: "https://i.postimg.cc/qqV6zTSV/ca936d51-ad88-4d17-9b6a-fd9732d5e2f4.jpg" },
+        { name: "Tisot Modelo 7", img: "https://i.postimg.cc/prfhjSM9/d631fc4c-b6dd-4870-91a8-703b9e7c84ec.jpg" },
+        { name: "Tisot Modelo 8", img: "https://i.postimg.cc/5NJFJf88/e2775a1a-3cfb-4444-802c-c6bc71cfc305.jpg" },
+        { name: "Tisot Modelo 9", img: "https://i.postimg.cc/NGmrZK2g/e3b71487-f26c-44e3-ad98-7afc5a12a66d.jpg" },
+        { name: "Tisot Modelo 10", img: "https://i.postimg.cc/150wV8yW/f00f40a5-09c8-4560-8eae-a6bde207bf52.jpg" },
+        { name: "Tisot Dama Modelo 1", img: "https://i.postimg.cc/QtpxYW4w/5f8f0aec-bcab-4658-965b-e07f0f17d0e0.jpg" },
+        { name: "Tisot Dama Modelo 2", img: "https://i.postimg.cc/6qt6k5F3/e2097059-685d-4f85-8f51-f99e33667b2d.jpg" }
+      ],
       "ROLEX": [
-        { name: "Rolex Modelo 1", img: "https://i.postimg.cc/26P8B4Gt/0e3064b1-904d-4bf6-a637-55f7e5da080d.jpg" },
-        { name: "Rolex Modelo 2", img: "https://i.postimg.cc/Qd08qLS1/14f74bd6-935e-4e62-a038-7e9b4e572712.jpg" },
-        { name: "Rolex Modelo 3", img: "https://i.postimg.cc/sfh2CNDC/1cabfa00-da98-490f-973e-9e3932311580.jpg" },
-        { name: "Rolex Modelo 4", img: "https://i.postimg.cc/yYK746b0/32708e54-dd86-43c5-866b-ccd5da745195.jpg" },
-        { name: "Rolex Modelo 5", img: "https://i.postimg.cc/FKz9WPnq/35cd14f2-e726-4e41-84e7-fd5155756659.jpg" },
-        { name: "Rolex Modelo 6", img: "https://i.postimg.cc/0QJ9xzv0/386a1066-97b7-4f40-b89d-a6c4a5ae93fa.jpg" },
-        { name: "Rolex Modelo 7", img: "https://i.postimg.cc/xTGTcNzs/3d2cf1ac-856f-46a3-8a0b-c316d2273959.jpg" },
-        { name: "Rolex Modelo 8", img: "https://i.postimg.cc/CLpxhszB/3dfe8f75-b6e0-4723-bd35-6ca57bc65d2d.jpg" },
-        { name: "Rolex Modelo 9", img: "https://i.postimg.cc/QMzjRp2M/45d39f59-81f7-41a6-aded-0fd9801f285c.jpg" },
-        { name: "Rolex Modelo 10", img: "https://i.postimg.cc/FHWvLysx/711034ca-5cc2-44c0-9b3e-9708a7a206fb.jpg" },
-        { name: "Rolex Modelo 11", img: "https://i.postimg.cc/RCKvDJXM/7657e33a-f7ed-4713-97be-182d744afab9.jpg" },
-        { name: "Rolex Modelo 12", img: "https://i.postimg.cc/6qJtQB5J/781afb84-5207-44ea-92aa-b20f0544e22f.jpg" },
-        { name: "Rolex Modelo 13", img: "https://i.postimg.cc/3xJ7NS7R/88529865-8e70-4b96-8a0a-47a2b985d686.jpg" },
-        { name: "Rolex Modelo 14", img: "https://i.postimg.cc/fycZt1J3/8916d997-7638-4bb0-b23a-93f6a9856cb0.jpg" },
-        { name: "Rolex Modelo 15", img: "https://i.postimg.cc/gkKmY9CQ/9047c7e0-1091-41b0-90b5-0a0bb57fa5ca.jpg" },
-        { name: "Rolex Modelo 16", img: "https://i.postimg.cc/Gmc3Y3Pb/9bd6049a-5309-4ed0-89af-f2e95fef1543.jpg" },
-        { name: "Rolex Modelo 17", img: "https://i.postimg.cc/jjDbQDDY/a1bd4e25-5076-4eac-b37e-465487ba6ae9.jpg" },
-        { name: "Rolex Modelo 18", img: "https://i.postimg.cc/DzRKC7GJ/ac3f3bb9-da3e-4e24-9fae-a1f80e3e6fa3.jpg" },
-        { name: "Rolex Modelo 19", img: "https://i.postimg.cc/rmW237Gh/b82a6cd7-5e5d-43b9-919d-5b6e99d83b1a.jpg" },
-        { name: "Rolex Modelo 20", img: "https://i.postimg.cc/RhL5VfDK/c956ed47-d556-4bda-be04-1e96d537d63d.jpg" },
-        { name: "Rolex Modelo 21", img: "https://i.postimg.cc/C5gpgJmw/c9bc4011-034d-4f89-8be1-bd8e39bba668.jpg" },
-        { name: "Rolex Modelo 22", img: "https://postimg.cc/rmW237Gh/b82a6cd7-5e5d-43b9-919d-5b6e99d83b1a.jpg" },
-        { name: "Rolex Modelo 20", img: "https://i.postimg.cc/RhL5VfDK/c956ed47-d556-4bda-be04-1e96d537d63d.jpg" },
-        { name: "Rolex Modelo 21", img: "https://i.postimg.cc/C5gpgJmw/c9bc4011-034d-4f89-8be1-bd8e39bba668.jpg" },
-        { name: "Rolex Modelo 22", img: "https://i.postimg.cc/J7NWqVz0/d439e255-c1d6-4fba-827c-bd78c4d37d59.jpg" },
-        { name: "Rolex Modelo 23", img: "https://i.postimg.cc/7Yqrts5V/eed21fa4-9c06-4067-a366-7e2ed361f5b7.jpg" },
+        
       ]
     };
 
