--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
         { name: "Tisot Modelo 9", img: "https://i.postimg.cc/NGmrZK2g/e3b71487-f26c-44e3-ad98-7afc5a12a66d.jpg" },
         { name: "Tisot Modelo 10", img: "https://i.postimg.cc/150wV8yW/f00f40a5-09c8-4560-8eae-a6bde207bf52.jpg" },
         { name: "Tisot Dama Modelo 1", img: "https://i.postimg.cc/QtpxYW4w/5f8f0aec-bcab-4658-965b-e07f0f17d0e0.jpg" },
-        { name: "Tisot Dama Modelo 2", img: "https://i.postimg.cc/6qt6k5F3/e2097059-685d-4f85-8f51-f99e33667b2d.jpg" }
+        { name: "Tisot Dama Modelo 2", img: "https://i.postimg.cc/6qt6k5F3/e2097059-685d-4f85-8f51-f99e33667b2d.jpg" },
       ],
       "ROLEX": [
         
