--- a/index.html
+++ b/index.html
@@ -281,19 +281,19 @@
         { name: "Sanse Modelo 5", img: "https://i.postimg.cc/Y0zcw2kX/d498c445-09de-4bce-9780-dabbcbab3737.jpg" },
         { name: "Sanse Modelo 6", img: "https://i.postimg.cc/kg1m45Sz/f2466599-79e4-42e2-bac1-f92ecbd510ce.jpg" },
       ],
-      "TISOT": [
-        { name: "Tisot Modelo 1", img: "https://i.postimg.cc/XvPC6Fgv/3d292dba-742f-4784-a32d-414e60258238.jpg" },
-        { name: "Tisot Modelo 2", img: "https://i.postimg.cc/wBMmrFLP/799a8ba8-0332-4370-b967-87e692986807.jpg" },
-        { name: "Tisot Modelo 3", img: "https://i.postimg.cc/dVqd2J1J/9ff77647-ba8a-4792-9147-eb7c43a664f6.jpg" },
-        { name: "Tisot Modelo 4", img: "https://i.postimg.cc/rwQ4g70x/ab802fff-936a-414f-ae12-8f3860459022.jpg" },
-        { name: "Tisot Modelo 5", img: "https://i.postimg.cc/TwWWdwkJ/be95ad66-1d06-47c9-8eba-de307630570b.jpg" },
-        { name: "Tisot Modelo 6", img: "https://i.postimg.cc/qqV6zTSV/ca936d51-ad88-4d17-9b6a-fd9732d5e2f4.jpg" },
-        { name: "Tisot Modelo 7", img: "https://i.postimg.cc/prfhjSM9/d631fc4c-b6dd-4870-91a8-703b9e7c84ec.jpg" },
-        { name: "Tisot Modelo 8", img: "https://i.postimg.cc/5NJFJf88/e2775a1a-3cfb-4444-802c-c6bc71cfc305.jpg" },
-        { name: "Tisot Modelo 9", img: "https://i.postimg.cc/NGmrZK2g/e3b71487-f26c-44e3-ad98-7afc5a12a66d.jpg" },
-        { name: "Tisot Modelo 10", img: "https://i.postimg.cc/150wV8yW/f00f40a5-09c8-4560-8eae-a6bde207bf52.jpg" },
-        { name: "Tisot Dama Modelo 1", img: "https://i.postimg.cc/QtpxYW4w/5f8f0aec-bcab-4658-965b-e07f0f17d0e0.jpg" },
-        { name: "Tisot Dama Modelo 2", img: "https://i.postimg.cc/6qt6k5F3/e2097059-685d-4f85-8f51-f99e33667b2d.jpg" },
+      "TISSOT": [
+        { name: "Tissot Modelo 1", img: "https://i.postimg.cc/XvPC6Fgv/3d292dba-742f-4784-a32d-414e60258238.jpg" },
+        { name: "Tissot Modelo 2", img: "https://i.postimg.cc/wBMmrFLP/799a8ba8-0332-4370-b967-87e692986807.jpg" },
+        { name: "Tissot Modelo 3", img: "https://i.postimg.cc/dVqd2J1J/9ff77647-ba8a-4792-9147-eb7c43a664f6.jpg" },
+        { name: "Tissot Modelo 4", img: "https://i.postimg.cc/rwQ4g70x/ab802fff-936a-414f-ae12-8f3860459022.jpg" },
+        { name: "Tissot Modelo 5", img: "https://i.postimg.cc/TwWWdwkJ/be95ad66-1d06-47c9-8eba-de307630570b.jpg" },
+        { name: "Tissot Modelo 6", img: "https://i.postimg.cc/qqV6zTSV/ca936d51-ad88-4d17-9b6a-fd9732d5e2f4.jpg" },
+        { name: "Tissot Modelo 7", img: "https://i.postimg.cc/prfhjSM9/d631fc4c-b6dd-4870-91a8-703b9e7c84ec.jpg" },
+        { name: "Tissot Modelo 8", img: "https://i.postimg.cc/5NJFJf88/e2775a1a-3cfb-4444-802c-c6bc71cfc305.jpg" },
+        { name: "Tissot Modelo 9", img: "https://i.postimg.cc/NGmrZK2g/e3b71487-f26c-44e3-ad98-7afc5a12a66d.jpg" },
+        { name: "Tissot Modelo 10", img: "https://i.postimg.cc/150wV8yW/f00f40a5-09c8-4560-8eae-a6bde207bf52.jpg" },
+        { name: "Tissot Dama Modelo 1", img: "https://i.postimg.cc/QtpxYW4w/5f8f0aec-bcab-4658-965b-e07f0f17d0e0.jpg" },
+        { name: "Tissot Dama Modelo 2", img: "https://i.postimg.cc/6qt6k5F3/e2097059-685d-4f85-8f51-f99e33667b2d.jpg" }
       ],
       "ROLEX": [
         
