--- a/index.html
+++ b/index.html
@@ -96,6 +96,11 @@
         { name: "AP Modelo 4", img: "https://i.postimg.cc/t4GFW6J8/AP4.jpg" },
         { name: "AP Modelo 5", img: "https://i.postimg.cc/65vd8cWd/AP5.jpg" },
         { name: "AP Modelo 6", img: "https://i.postimg.cc/sXMJwrrL/AP3.jpg" },
+        { name: "AP Modelo 7", img: "https://i.postimg.cc/5tGRcWMh/4dd7a1c4-825b-4c44-93c5-47cdab9faa7a.jpg" },
+        { name: "AP Modelo 8", img: "https://i.postimg.cc/vZYjfvzN/63689bbe-b339-46d0-868b-d0eefc127bc5.jpg" },
+        { name: "AP Modelo 9", img: "https://i.postimg.cc/Njdn4rCf/69363baa-2e5e-4e8b-bd2c-63274c263469.jpg" },
+        { name: "AP Modelo 10", img: "https://i.postimg.cc/3wWcbJzj/8fd55b4c-097c-4c38-9b38-1f56fd3e27f3.jpg" },
+        { name: "AP Modelo 11", img: "https://i.postimg.cc/0QwHPXkb/cb69856a-9554-4ffa-bb20-6379c4591722.jpg" },
       ],
       "TECHNOMARINE": [
         { name: "Technomarine Modelo 1", img: "https://i.postimg.cc/ncXK5Rkm/025c9c70-af95-4b0a-a3dd-1a8a22c6c98e.jpg" },
