--- a/index.html
+++ b/index.html
@@ -248,6 +248,15 @@
         { name: "Cartier Modelo 10", img: "https://i.postimg.cc/hjnd7RGx/d20d5881-18b4-4d30-94ba-93037c5a73e4.jpg" },
         { name: "Cartier Modelo 11", img: "https://i.postimg.cc/qRGCsDtF/de0ff9e5-527c-464d-b5cd-121f31d67109.jpg" },
         { name: "Cartier Modelo 12", img: "https://i.postimg.cc/fyTSB7mR/ff29d160-1031-4560-89ca-aa40177ac44d.jpg" },
+        { name: "Cartier Modelo 13", img: "https://i.postimg.cc/Ssn5vNYF/247f00a8-d8dd-42b4-ba80-d8f1aec78277.jpg" },
+        { name: "Cartier Modelo 14", img: "https://i.postimg.cc/Y2mZN0wQ/2741629c-a6da-42bb-8146-c2f3fa190657.jpg" },
+        { name: "Cartier Modelo 15", img: "https://i.postimg.cc/yY45LKVt/42af039c-7aeb-480d-a147-25fd9cb125f4.jpg" },
+        { name: "Cartier Modelo 16", img: "https://i.postimg.cc/6pBPNh4h/6cb2c94b-9f61-4c5b-8e88-292097a219a0.jpg" },
+        { name: "Cartier Modelo 17", img: "https://i.postimg.cc/QtvPGGcB/9b78f624-5cff-4b8e-a542-fadd75d2f8f6.jpg" },
+        { name: "Cartier Modelo 18", img: "https://i.postimg.cc/13KLgd1T/a6b5133c-c599-419f-b35e-adee62d4bc40.jpg" },
+        { name: "Cartier Modelo 19", img: "https://i.postimg.cc/J0JFR6Qp/c8d46eab-9e3d-4cd4-9b56-6ffc186a07d8.jpg" },
+        { name: "Cartier Modelo 20", img: "https://i.postimg.cc/hPLYwYvj/c8da4832-b140-4738-b8f8-673161421835.jpg" },
+        { name: "Cartier Modelo 21", img: "https://i.postimg.cc/ZqKX6LTq/d94ce6f8-a92d-4358-96df-4f96b405c" },
       ],
       "PATEK": [
         { name: "Patek Dama Modelo 1", img: "https://i.postimg.cc/wvRb9q5X/0cb2336f-7882-44ca-a04d-fa9c02ee4684.jpg" },
