--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         const brands = [
   "ROLEX", "AP", "CARTIER", "CASIO", "G SHOCK", "G FORCE", "G FOX", "HUBLOT",
   "INVICTA", "MINIFOCUS", "ORIENT", "PATEK", "Q&Q",
-  "RICHARD MILLE", "SANSE", "TECHNOMARINE", "TISSOT"
+  "RICHARD MILLE", "SANSE", "TECHNOMARINE", "TISSOT", "CUBANOS"
 ];
         brands.forEach((brand) => {
           document.write(`
@@ -148,6 +148,13 @@
       ],
       "G FORCE": [ 
         { name: "G Force Modelo 1", img: "https://i.postimg.cc/nrQpmf4Z/072d5647-05b1-4a12-8c81-fc9245d75c0d.jpg" },
+      ],
+      "CUBANOS": [ 
+        { name: "Cubano Modelo 1", img: "https://i.postimg.cc/HW0smXYk/14a09a72-15ca-48ba-b75a-94c4539e31c5.jpg" },
+        { name: "Cubano Modelo 2", img: "https://i.postimg.cc/prvW8XZv/1ce7aa31-4039-4805-9877-b18ecc5887ab.jpg" },
+        { name: "Cubano Modelo 3", img: "https://i.postimg.cc/1XK9KhCq/4cb0bdac-0f4a-4c31-b950-c12dcd53bb8a.jpg" },
+        { name: "Cubano Modelo 4", img: "https://i.postimg.cc/yYv1gKSq/766c57b1-f430-4592-a617-fe342ac6829f.jpg" },
+        { name: "Cubano Modelo 5", img: "https://i.postimg.cc/kXnMgGGF/ba67f8ac-7717-47a8-8428-04d3bfc5a149.jpg" },
       ],
       "HUBLOT": [
         { name: "Hublot Modelo 1", img: "https://i.postimg.cc/QNRX3VDM/01d1eedc-76ce-452a-87e2-e8b21eccace7.jpg" },
