--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         const brands = [
   "ROLEX", "AP", "CARTIER", "CASIO", "G SHOCK", "G FORCE", "G FOX", "HUBLOT",
   "INVICTA", "MINIFOCUS", "ORIENT", "PATEK", "Q&Q",
-  "RICHARD MILLE", "SANSE", "TECHNOMARINE", "TISSOT", "CUBANOS"
+  "RICHARD MILLE", "SANSE", "TECHNOMARINE", "TISSOT", "CUBANOS", "DIESEL"
 ];
         brands.forEach((brand) => {
           document.write(`
@@ -127,6 +127,14 @@
         { name: "Technomarine Modelo 22", img: "https://i.postimg.cc/1Rjwp0Q3/f7926e45-e2a2-4a10-8539-53f1bb7eb7f9.jpg" },
         { name: "Technomarine Modelo 23", img: "https://i.postimg.cc/3RLpfm09/fe8e5eeb-5877-40cc-b443-40e00f90ab66.jpg" },
         { name: "Technomarine Dama Modelo 1", img: "https://i.postimg.cc/ZKNj7Y43/7521cdf8-2c34-468d-94f1-39649e20971a.jpg" }
+      ],
+      "DIESEL": [
+        { name: "Diesel Modelo 1", img: "https://i.postimg.cc/tJJrBFDN/10116812-c221-45d4-af9e-d373ee2e64e5.jpg" },
+        { name: "Diesel Modelo 2", img: "https://i.postimg.cc/GpPStLHG/2a1f42df-e3c7-426a-839e-bfd5ed3564e2.jpg" },
+        { name: "Diesel Modelo 3", img: "https://i.postimg.cc/RFMpnkH8/609acc2a-e2ce-4f68-9845-94d75b6df945.jpg" },
+        { name: "Diesel Modelo 4", img: "https://i.postimg.cc/cCzF26by/a3be1469-7d45-41df-afe7-a30dff0cc34e.jpg" },
+        { name: "Diesel Modelo 5", img: "https://i.postimg.cc/fWqqJgT2/dd605030-9f4f-41cd-a580-3d4cd6344a5f.jpg" },
+        { name: "Diesel Modelo 6", img: "https://i.postimg.cc/Bv3MdrM6/fdca2377-9899-4111-ab98-43bd50cc9b01.jpg" },
       ],
       "CASIO": [
         { name: "Casio Modelo 1", img: "https://i.postimg.cc/d0CwxY7f/0595ea8b-07e5-4121-9217-d490bd2e38bb.jpg" },
