--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
       <script>
         const brands = [
   "ROLEX", "AP", "CARTIER", "CASIO", "G SHOCK", "G FORCE", "G FOX", "HUBLOT",
-  "INVICTA", "MINIFOCUS", "ORIENT", "PATEK", "Q&Q",
-  "RICHARD MILLE", "SANSE", "TECHNOMARINE", "TISSOT", "CUBANOS", "DIESEL"
+  "INVICTA", "MINIFOCUS", "ORIENT", "PATEK", "Q&Q", "DIESEL",
+  "RICHARD MILLE", "SANSE", "TECHNOMARINE", "TISSOT", "CUBANOS", 
 ];
         brands.forEach((brand) => {
           document.write(`
