--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>EP TIME WATCHES</title>
-  <link rel="icon" href="https://i.postimg.cc/rsT4mTR0/Whats-App-Image-2025-07-14-at-1-29-45-AM.jpg" type="image/png">
+  <link rel="icon" href= <link rel="icon" href="favicon.ico" type="image/x-icon">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body { font-family: 'Segoe UI', sans-serif; }
